--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container text-center">
   	<div class="title">
     	<h1>POMODORO CLOCK</h1>
-    	<p>created by j-mag guthrie<br /> a <a href="http://freecodecamp.org" target="_blank">FreeCodeCamp</a> project</p>
+    	<p>created by aj voraman<br /> a <a href="http://freecodecamp.org" target="_blank">FreeCodeCamp</a> project</p>
   	</div> <!-- title -->
 
   	<div class="widgets">
